@@ -1,8 +1,8 @@
 package adaptorlib;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.net.URLDecoder;
-import java.net.URLEncoder;
 /** DocId refers to a unique document in repository.
   You give the GSA a DocId to have it insert your
   document for crawl and index.
@@ -46,32 +46,27 @@ public class DocId {
     return "DocId(" + uniqId + "|" + access + ")";
   }
 
-  private String encode(String s) {
-    try {
-      String encoding = Config.getGsaCharacterEncodingName();
-      String parts[] = s.split("/", -1);
-      StringBuilder encoded = new StringBuilder();
-      for (int i = 0; i < parts.length; i++) {
-        encoded.append("/");
-        encoded.append(URLEncoder.encode(parts[i], encoding));
+  private URI encode(String s) {
+    if (Config.passDocIdToGsaWithoutModification()) {
+      return URI.create(s);
+    } else {
+      URI base = Config.getBaseUri();
+      URI resource;
+      try {
+        resource = new URI(null, null, base.getPath() + "/" + s, null);
+      } catch (URISyntaxException ex) {
+        throw new IllegalStateException(ex);
       }
-      return "" + encoded; 
-    } catch (java.io.UnsupportedEncodingException uee) {
-      throw new IllegalStateException(uee);
+      return base.resolve(resource);
     }
   }
 
   /** Provides URL used in feed file sent to GSA. */
   URL getFeedFileUrl() {
     try {
-      if (Config.passDocIdToGsaWithoutModification()) {
-        return new URL(uniqId);
-      } else {
-        String prefix = Config.getUrlBeginning(this);
-        return new URL(prefix + encode(uniqId));
-      }
+      return encode(uniqId).toURL();
     } catch (MalformedURLException e) {
-      throw new IllegalStateException("unable to safely encode " + this);
+      throw new IllegalStateException("unable to safely encode " + this, e);
     }
   }
 
@@ -80,24 +75,14 @@ public class DocId {
     return "add";
   } 
 
-  /** Given a URL that was used in feed file, convert back to doc id. */
-  static String decode(URL url) {
+  /** Given a URI that was used in feed file, convert back to doc id. */
+  static String decode(URI uri) {
     if (Config.passDocIdToGsaWithoutModification()) {
-      return url.toString();
+      return uri.toString();
     } else {
-      try {
-        String path = url.getPath().substring(1);
-        String encoding = Config.getGsaCharacterEncodingName();
-        String parts[] = path.split("/", -1);
-        StringBuilder decoded = new StringBuilder();
-        for (int i = 0; i < parts.length; i++) {
-          decoded.append("/");
-          decoded.append(URLDecoder.decode(parts[i], encoding));
-        }
-        return decoded.substring(1); 
-      } catch (java.io.UnsupportedEncodingException uee) {
-        throw new IllegalStateException(uee);
-      }
+      // +1 for "/" separator
+      String basePath = Config.getBaseUri().getPath();
+      return uri.getPath().substring(basePath.length() + 1);
     }
   }
 
